# linux-namespaces-rust

./: Cargo.toml  README.md  shell.nix
demo_userns/: Cargo.toml
demo_userns/src/: main.rs
demo_uts_namespaces/: Cargo.toml  README.md
demo_uts_namespaces/src/: main.rs
ns_child_exec/: Cargo.toml  README.md
ns_child_exec/src/: main.rs
ns_exec/: Cargo.toml
ns_exec/src/: main.rs
ns_run/: Cargo.toml
ns_run/src/: main.rs
orphan/: Cargo.toml
orphan/src/: main.rs
pidns_init_sleep/: Cargo.toml
pidns_init_sleep/src/: main.rs
simple_init/: Cargo.toml
simple_init/src/: main.rs
unshare/: Cargo.toml
unshare/src/: main.rs
userns_child_exec/: Cargo.toml  build.rs
userns_child_exec/proto/: userns.proto
userns_child_exec/src/: grpc_client.rs  grpc_handler.rs  main.rs
