[package]
name = "simple_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
nix = { version = "0.26.2", features = ["sched"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = { version = "0.9.0" }
